# rocketpal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LaunchDayAuto.ps1  LaunchDayAuto.sh  README.md  Team08_RocketPy_v1.py  Team08_RocketPy_v2.py  Team08_RocketPy_v5.py  bears-flight-simulation.spec  flight_simulation_gui.py  genindex.html  index.html  license_header.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run-simulation.bat  run-simulation.ps1  run-simulation.sh  search.html  searchindex.js  stargaze-flight-simulation.py  stargaze_flight_simulation.py
.github/: copilot-instructions.md
_modules/: index.html
api/: modules.html  rocketpal.common.common_paths.html  rocketpal.common.html  rocketpal.core.airbrake_library.html  rocketpal.core.config.html  rocketpal.core.flight_simulation.html  rocketpal.core.html  rocketpal.core.library.html  rocketpal.core.library_entry.html  rocketpal.core.location_library.html  rocketpal.core.motor_library.html  rocketpal.core.parachute_library.html  rocketpal.core.part.html  rocketpal.core.weather_library.html  rocketpal.exporters.airbrake_export.html  rocketpal.exporters.altitude_plots.html  rocketpal.exporters.flight_data_export.html  rocketpal.exporters.html  rocketpal.gui.asset_library_editor_main_widget.html  rocketpal.gui.cloeseable_window_widget.html  rocketpal.gui.editor_main_widget.html  rocketpal.gui.flight_simulation_gui.html  rocketpal.gui.html  rocketpal.gui.library_selector_widget.html  rocketpal.gui.location_library_editor_widget.html  rocketpal.gui.results_widget.html  rocketpal.html  rocketpal.parsers.airbrake_config.html  rocketpal.parsers.fins_config.html  rocketpal.parsers.html  rocketpal.parsers.location_config.html  rocketpal.parsers.motor_config.html  rocketpal.parsers.nosecone_config.html  rocketpal.parsers.parachute_config.html  rocketpal.parsers.rail_button_config.html  rocketpal.parsers.simulation_config.html  rocketpal.parsers.weather_config.html  rocketpal.simulation.html  rocketpal.simulation_gui.html  rocketpal.utilities.airbrake_controllers.html  (+2 more)
bears_flight_simulation/: __main__.py  simulation.py  simulation_gui.py
core/: flight_simulation.py  motor_library.py
docs/: conf.py  index.rst
exporters/: flight_data_export.py
gui/: flight_simulation_gui.py  library_selector_widget.py  location_library_widget.py
hacks/: matplotlib_hacks.py
input/: Cesaroni_6026M1670-P.yaml  configuration.yaml  location.yaml  motor_config.yaml
parsers/: config.py  fins_config.py  location.py  motor_config.py  (+5 more)
(+226 files in other folders)
