[project]
name = "bears-flight-simulation"
version = "0.1.0"
description = "RocketPy-based flight simulation for BEARS rockets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pyside6>=6.10.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "rocketpy[all]==1.11.0",
    "types-pyyaml>=6.0.12.20250915",
]
