[project]
name = "bears-flight-simulation"
version = "0.1.0"
description = "RocketPy-based flight simulation for BEARS rockets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.3",
    "rocketpy[all]==1.12.1",
    "types-pyyaml>=6.0.12.20250915",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
