# Copyright (C) 2023-2026  BEARS e.V. and contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocketpal"
version = "0.1.0"
description = "Flight simulation framework based on RocketPy"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "BEARS e.V."},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.3",
    "rocketpy[all]==1.13.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.urls]
Repository = "https://github.com/bears-space/rocketpal"
Documentation = "https://bears-space.github.io/rocketpal"
"Issue Tracker" = "https://github.com/bears-space/rocketpal/issues"
Changelog = "https://github.com/bears-space/rocketpal/releases"

[project.scripts]
rocketpal = "rocketpal.__main__:cli"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
]
